--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "jonathanong/s3-set-headers",
   "dependencies": {
     "batch-then": "^1.0.0",
+    "debug": "^2.2.0",
     "knox": "^0.9.2",
     "s3-lister": "^0.1.0"
   },
